@@ -1,9 +1,15 @@
 hw-detect (1.65) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * Look for firmware files in a firmware subdirectory of the media, 
     as well as at the top level, for neat freaks.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 07 Jul 2008 19:43:21 -0400
+  [ Frans Pop ]
+  * Starting with initramfs-tools 0.92d the module ide-generic will be loaded
+    if the all_generic_ide parameter is passed. Advantage is that with that
+    option the module is loaded last instead of first.
+
+ -- Frans Pop <fjp@debian.org>  Wed, 16 Jul 2008 12:48:35 +0200
 
 hw-detect (1.64) unstable; urgency=low
 
